SONAR-11792 update ES JVM options to match defaults in ES 6.6.2