@@ -19,16 +19,24 @@
  */
 package org.sonar.application.command;
 
+import com.tngtech.java.junit.dataprovider.DataProvider;
+import com.tngtech.java.junit.dataprovider.DataProviderRunner;
+import com.tngtech.java.junit.dataprovider.UseDataProvider;
 import java.io.File;
 import java.io.IOException;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
 import org.junit.rules.TemporaryFolder;
+import org.junit.runner.RunWith;
+import org.sonar.process.System2;
 import org.sonar.test.ExceptionCauseMatcher;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
+@RunWith(DataProviderRunner.class)
 public class EsJvmOptionsTest {
   @Rule
   public TemporaryFolder temporaryFolder = new TemporaryFolder();
@@ -36,29 +44,114 @@ public class EsJvmOptionsTest {
   public ExpectedException expectedException = ExpectedException.none();
 
   @Test
-  public void constructor_sets_mandatory_JVM_options() throws IOException {
+  @UseDataProvider("java8or11")
+  public void constructor_sets_mandatory_JVM_options_on_Java_8_and_11(System2 system2) throws IOException {
     File tmpDir = temporaryFolder.newFolder();
-    EsJvmOptions underTest = new EsJvmOptions(tmpDir);
+    EsJvmOptions underTest = new EsJvmOptions(system2, tmpDir);
 
-    assertThat(underTest.getAll()).containsExactly(
-      "-XX:+UseConcMarkSweepGC",
-      "-XX:CMSInitiatingOccupancyFraction=75",
-      "-XX:+UseCMSInitiatingOccupancyOnly",
-      "-XX:+AlwaysPreTouch",
-      "-Xss1m",
-      "-Djava.awt.headless=true",
-      "-Djava.io.tmpdir="+ tmpDir.getAbsolutePath(),
-      "-Dfile.encoding=UTF-8",
-      "-Djna.nosys=true",
-      "-Djdk.io.permissionsUseCanonicalPath=true",
-      "-Dio.netty.noUnsafe=true",
-      "-Dio.netty.noKeySetOptimization=true",
-      "-Dio.netty.recycler.maxCapacityPerThread=0",
-      "-Dlog4j.shutdownHookEnabled=false",
-      "-Dlog4j2.disable.jmx=true",
-      "-Dlog4j.skipJansi=true");
+    assertThat(underTest.getAll())
+      .containsExactly(
+        "-XX:+UseConcMarkSweepGC",
+        "-XX:CMSInitiatingOccupancyFraction=75",
+        "-XX:+UseCMSInitiatingOccupancyOnly",
+        "-Des.networkaddress.cache.ttl=60",
+        "-Des.networkaddress.cache.negative.ttl=10",
+        "-XX:+AlwaysPreTouch",
+        "-Xss1m",
+        "-Djava.awt.headless=true",
+        "-Dfile.encoding=UTF-8",
+        "-Djna.nosys=true",
+        "-XX:-OmitStackTraceInFastThrow",
+        "-Dio.netty.noUnsafe=true",
+        "-Dio.netty.noKeySetOptimization=true",
+        "-Dio.netty.recycler.maxCapacityPerThread=0",
+        "-Dlog4j.shutdownHookEnabled=false",
+        "-Dlog4j2.disable.jmx=true",
+        "-Djava.io.tmpdir=" + tmpDir.getAbsolutePath(),
+        "-XX:ErrorFile=../logs/es_hs_err_pid%p.log");
   }
 
+  @DataProvider
+  public static Object[][] java8or11() {
+    System2 java8 = mock(System2.class);
+    when(java8.isJava9()).thenReturn(false);
+    when(java8.isJava10()).thenReturn(false);
+    System2 java10 = mock(System2.class);
+    when(java10.isJava9()).thenReturn(false);
+    when(java10.isJava10()).thenReturn(false);
+    return new Object[][] {
+      {java8},
+      {java10}
+    };
+  }
+
+  @Test
+  public void constructor_sets_mandatory_JVM_options_on_Java_9() throws IOException {
+    System2 java9 = mock(System2.class);
+    when(java9.isJava9()).thenReturn(true);
+    when(java9.isJava10()).thenReturn(false);
+
+    File tmpDir = temporaryFolder.newFolder();
+    EsJvmOptions underTest = new EsJvmOptions(java9, tmpDir);
+
+    assertThat(underTest.getAll())
+      .containsExactly(
+        "-XX:+UseConcMarkSweepGC",
+        "-XX:CMSInitiatingOccupancyFraction=75",
+        "-XX:+UseCMSInitiatingOccupancyOnly",
+        "-Des.networkaddress.cache.ttl=60",
+        "-Des.networkaddress.cache.negative.ttl=10",
+        "-XX:+AlwaysPreTouch",
+        "-Xss1m",
+        "-Djava.awt.headless=true",
+        "-Dfile.encoding=UTF-8",
+        "-Djna.nosys=true",
+        "-XX:-OmitStackTraceInFastThrow",
+        "-Dio.netty.noUnsafe=true",
+        "-Dio.netty.noKeySetOptimization=true",
+        "-Dio.netty.recycler.maxCapacityPerThread=0",
+        "-Dlog4j.shutdownHookEnabled=false",
+        "-Dlog4j2.disable.jmx=true",
+        "-Djava.io.tmpdir=" + tmpDir.getAbsolutePath(),
+        "-XX:ErrorFile=../logs/es_hs_err_pid%p.log",
+        "-Djava.locale.providers=COMPAT");
+  }
+
+  @Test
+  public void constructor_sets_mandatory_JVM_options_on_Java_10() throws IOException {
+    System2 java10 = mock(System2.class);
+    when(java10.isJava9()).thenReturn(false);
+    when(java10.isJava10()).thenReturn(true);
+
+    File tmpDir = temporaryFolder.newFolder();
+    EsJvmOptions underTest = new EsJvmOptions(java10, tmpDir);
+
+    assertThat(underTest.getAll())
+      .containsExactly(
+        "-XX:+UseConcMarkSweepGC",
+        "-XX:CMSInitiatingOccupancyFraction=75",
+        "-XX:+UseCMSInitiatingOccupancyOnly",
+        "-Des.networkaddress.cache.ttl=60",
+        "-Des.networkaddress.cache.negative.ttl=10",
+        "-XX:+AlwaysPreTouch",
+        "-Xss1m",
+        "-Djava.awt.headless=true",
+        "-Dfile.encoding=UTF-8",
+        "-Djna.nosys=true",
+        "-XX:-OmitStackTraceInFastThrow",
+        "-Dio.netty.noUnsafe=true",
+        "-Dio.netty.noKeySetOptimization=true",
+        "-Dio.netty.recycler.maxCapacityPerThread=0",
+        "-Dlog4j.shutdownHookEnabled=false",
+        "-Dlog4j2.disable.jmx=true",
+        "-Djava.io.tmpdir=" + tmpDir.getAbsolutePath(),
+        "-XX:ErrorFile=../logs/es_hs_err_pid%p.log",
+        "-XX:UseAVX=2");
+  }
+
+  /**
+   * This test may fail if SQ's test are not executed with target Java version 8.
+   */
   @Test
   public void writeToJvmOptionFile_writes_all_JVM_options_to_file_with_warning_header() throws IOException {
     File tmpDir = temporaryFolder.newFolder("with space");
@@ -78,19 +171,21 @@ public class EsJvmOptionsTest {
         "-XX:+UseConcMarkSweepGC\n" +
         "-XX:CMSInitiatingOccupancyFraction=75\n" +
         "-XX:+UseCMSInitiatingOccupancyOnly\n" +
+        "-Des.networkaddress.cache.ttl=60\n" +
+        "-Des.networkaddress.cache.negative.ttl=10\n" +
         "-XX:+AlwaysPreTouch\n" +
         "-Xss1m\n" +
         "-Djava.awt.headless=true\n" +
-        "-Djava.io.tmpdir=" + tmpDir.getAbsolutePath() + "\n" +
         "-Dfile.encoding=UTF-8\n" +
         "-Djna.nosys=true\n" +
-        "-Djdk.io.permissionsUseCanonicalPath=true\n" +
+        "-XX:-OmitStackTraceInFastThrow\n" +
         "-Dio.netty.noUnsafe=true\n" +
         "-Dio.netty.noKeySetOptimization=true\n" +
         "-Dio.netty.recycler.maxCapacityPerThread=0\n" +
         "-Dlog4j.shutdownHookEnabled=false\n" +
         "-Dlog4j2.disable.jmx=true\n" +
-        "-Dlog4j.skipJansi=true\n" +
+        "-Djava.io.tmpdir=" + tmpDir.getAbsolutePath() + "\n" +
+        "-XX:ErrorFile=../logs/es_hs_err_pid%p.log\n" +
         "-foo\n" +
         "-bar");
 
